ispCP ω 1.0.1 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-03-25 Thomas Häber
	- GUI:
		* Fixed #1667: It should be possible to (de)activate the log-comment on logon/password ispcp gui footer.

2009-03-24 Thomas Häber
	- GUI:
		* Fixed #1762: MySQL Syntax Error (regression)
		* Fixed #1763: Wrong Harddisk Usage

2009-03-24 Benedikt Heintel
	- ENGINE:
		* Fixed #1627: Accented characters in UTF8 encoding Autoreplay message - ispcp-arpl
	- GUI:
		* Fixed #678: deleting a mysql database also deletes the user without askint to.

2009-03-23 Jochen Manz
	- ENGINE
		* Added Nathariels ispcp-vrl-traff improvements

2009-03-23 Benedikt Heintel
	- GUI:
		* Added new Favicon
	- TOOLS:
		* Fixed #1728: update net2ftp to version 0.97

2009-03-22 Thomas Häber
	- GUI:
		* Fixed #1758: domain_details.php error.

2009-03-18 Thomas Häber
	- ENGINE:
		* Fixed #1668: Add the LZMA compression to the possible backup zipping algorithms (currently only tested with debian lenny)

2009-03-18 Benedikt Heintel
	- ENGINE:
		* Fixed #1726: Removing the logs folder from the disk space monitoring
		* Fixed #1747: awstats new version (Updated AWStats to version 6.9)
 	- DISTS:
		* Fixed #1738 (FreeBSD): Add FreeBSD patch

2009-03-16 Thomas Häber
	- GUI:
		* optimization: prevent 2nd gzip compression of GUI files

2009-03-11 Daniel Andreca
	- ENGINE:
		* Fixed #1729: Backup restore problem

2009-03-09 Daniel Andreca
	- GUI:
		* User cannot delete database

2009-03-06 Thomas Häber
	- Backend:
		* Fixed #1724: German to English language description
 
2009-03-05 Thomas Häber
	- GUI:
		* fixed HTML in ftp_choose_dir.tpl

2009-03-05 Daniel Andreca
	- GUI:
		* Fixed #1721: e-Mail from Supportsystem has problems with special chars
		* Fixed #1703: Databeseupdate r1555 don't work correct
	- DISTS:
		* Fixed #1714: Correct FreeBSD FastCGI/fcgid config

2009-03-04 Daniel Andreca
	- GUI:
		* Gender not displayed for reseller on order display

2009-03-04 Thomas Häber
	- GUI: