@@ -118,13 +118,13 @@ function get_reseller_id($domain_id) {
 
 	$query = <<<SQL_QUERY
 	SELECT
-		a.created_by
+		a.`created_by`
 	FROM
-		domain d, admin a
+		`domain` d, `admin` a
 	WHERE
-		d.domain_id = ?
+		d.`domain_id` = ?
 	AND
-		d.domain_admin_id = a.admin_id
+		d.`domain_admin_id` = a.`admin_id`
 SQL_QUERY;
 
 	$rs = exec_query($sql, $query, array($domain_id));
@@ -153,11 +153,11 @@ function load_user_data($user_id, $domain_id) {
 
 	$query = <<<SQL_QUERY
 		SELECT
-			domain_id
+			`domain_id`
 		FROM
-			domain
+			`domain`
 		WHERE
-			domain_id = ?
+			`domain_id` = ?
 SQL_QUERY;
 
 	$rs = exec_query($sql, $query, array($domain_id));
@@ -190,15 +190,15 @@ function load_additional_data($user_id, $domain_id) {
 	// Get domain data
 	$query = <<<SQL_QUERY
 		SELECT
-			domain_name,
-			domain_ip_id,
-			domain_php,
-			domain_cgi,
-			domain_admin_id
+			`domain_name`,
+			`domain_ip_id`,
+			`domain_php`,
+			`domain_cgi`,
+			`domain_admin_id`
 		FROM
-			domain
+			`domain`
 		WHERE
-			domain_id = ?
+			`domain_id` = ?
 SQL_QUERY;
 
 	$res = exec_query($sql, $query, array($domain_id));
@@ -212,12 +212,12 @@ SQL_QUERY;
 	// Get IP of domain
 	$query = <<<SQL_QUERY
 		SELECT
-			ip_number,
-			ip_domain
+			`ip_number`,
+			`ip_domain`
 		FROM
-			server_ips
+			`server_ips`
 		WHERE
-			ip_id = ?
+			`ip_id` = ?
 SQL_QUERY;
 
 	$res = exec_query($sql, $query, array($domain_ip_id));
@@ -227,13 +227,13 @@ SQL_QUERY;
 	// Get username of domain
 	$query = <<<SQL_QUERY
 		SELECT
-			admin_name
+			`admin_name`
 		FROM
-			admin
+			`admin`
 		WHERE
-			admin_id = ?
+			`admin_id` = ?
 		AND
-			admin_type = 'user'
+			`admin_type` = 'user'
 SQL_QUERY;
 
 	$res = exec_query($sql, $query, array($domain_admin_id));
@@ -393,14 +393,14 @@ function check_user_data(&$tpl, &$sql, $reseller_id, $user_id) {
 	if (empty($ed_error)) {
 		$query = <<<SQL_QUERY
 			SELECT
-				COUNT(su.sqlu_id) AS cnt
+				COUNT(su.`sqlu_id`) AS cnt
 			FROM
-				sql_user AS su,
-				sql_database AS sd
+				`sql_user` AS su,
+				`sql_database` AS sd
 			WHERE
-				su.sqld_id = sd.sqld_id
+				su.`sqld_id` = sd.`sqld_id`
 			AND
-				sd.domain_id = ?
+				sd.`domain_id` = ?
 SQL_QUERY;
 
 		$rs = exec_query($sql, $query, array($_SESSION['edit_id']));
@@ -415,7 +415,7 @@ SQL_QUERY;
 	if (empty($ed_error)) {
 		// Set domains status to 'change' to update mod_cband's limit
 		if ($previous_utraff_max != $utraff_max) {
-			$query = "UPDATE domain SET domain_status = 'change' WHERE domain_id = ?";
+			$query = "UPDATE `domain` SET `domain_status` = 'change' WHERE `domain_id` = ?";
 			exec_query($sql, $query, array($user_id));
 			check_for_lock_file();
 			send_request();
@@ -451,11 +451,11 @@ SQL_QUERY;
 		}
 
 		// update the sql quotas, too
-		$query = "SELECT domain_name FROM domain WHERE domain_id = ?";
+		$query = "SELECT `domain_name` FROM `domain` WHERE `domain_id` = ?";
 		$rs = exec_query($sql, $query, array($user_id));
 		$temp_dmn_name = $rs->fields['domain_name'];
 
-		$query = "SELECT COUNT(name) AS cnt FROM quotalimits WHERE name = ?";
+		$query = "SELECT COUNT(`name`) AS cnt FROM `quotalimits` WHERE `name` = ?";
 		$rs = exec_query($sql, $query, array($temp_dmn_name));
 		if ($rs->fields['cnt'] > 0) {
 			// we need to update it
@@ -465,7 +465,7 @@ SQL_QUERY;
 				$dlim = $disk * 1024 * 1024;
 			}
 
-			$query = "UPDATE quotalimits SET bytes_in_avail = ? WHERE name = ?";
+			$query = "UPDATE `quotalimits` SET `bytes_in_avail` = ? WHERE `name` = ?";
 			$rs = exec_query($sql, $query, array($dlim, $temp_dmn_name));
 		}
 
